[metadata]
name = statelint
version = attr: statelint.__version__
description = command-line validator for Amazon States Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taro-kayo/statelint
author = taro-kayo
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    python-dateutil>=2.8.2
    regex>=2022.1.18
python_requires = >=3.6.1

[options.packages.find]
include =
    statelint*

[options.entry_points]
console_scripts =
    statelint = statelint.cli:main

[options.extras_require]
yaml = PyYAML>=6.0

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true

[mypy-regex]
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = false
